objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Marketing Process</fullName>
        <description>for the marketing email that come in.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Follow Up</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Saks and Off 5th Support Process</fullName>
        <description>This support process is used to provide unique status values to off 5th and Saks cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Accommodation Gift Card Requests</fullName>
        </values>
        <values>
            <fullName>Awaiting Customer Response</fullName>
        </values>
        <values>
            <fullName>Awaiting Internal Response</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalate ORC MNR Review</fullName>
        </values>
        <values>
            <fullName>Escalate Risk Support El Salvador Team</fullName>
        </values>
        <values>
            <fullName>Escalate Risk Support Jackson Team</fullName>
        </values>
        <values>
            <fullName>Follow Up</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>MNR Review</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Non Responsive Customer</fullName>
        </values>
        <values>
            <fullName>POS Gift Card Processing</fullName>
        </values>
        <values>
            <fullName>Pending Fraud Team</fullName>
        </values>
        <values>
            <fullName>Response Received</fullName>
        </values>
        <values>
            <fullName>Risk Support El Salvador Team</fullName>
        </values>
        <values>
            <fullName>Risk Support Jackson Team</fullName>
        </values>
        <values>
            <fullName>System Issue</fullName>
        </values>
        <values>
            <fullName>Team Lead Assistance Needed</fullName>
        </values>
        <values>
            <fullName>Transferred to Back Office</fullName>
        </values>
        <values>
            <fullName>Transferred to Store Operations</fullName>
        </values>
        <values>
            <fullName>Virtual Gift Card Processing</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Accommodation Gift Card Requests</fullName>
        </values>
        <values>
            <fullName>Awaiting Customer Response</fullName>
        </values>
        <values>
            <fullName>Awaiting Internal Response</fullName>
        </values>
        <values>
            <fullName>Awaiting Service Excellence Review</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalate ORC MNR Review</fullName>
        </values>
        <values>
            <fullName>Escalate ORC POS Review</fullName>
        </values>
        <values>
            <fullName>Follow Up</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>MNR Review</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Non Responsive Customer</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>POS Team</fullName>
        </values>
        <values>
            <fullName>Pending Fraud Team</fullName>
        </values>
        <values>
            <fullName>Response Received</fullName>
        </values>
        <values>
            <fullName>System Issue</fullName>
        </values>
        <values>
            <fullName>Team Lead Assistance Needed</fullName>
        </values>
        <values>
            <fullName>Transferred to Store Operations</fullName>
        </values>
        <values>
            <fullName>Virtual Gift Card Processing</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Auto_Email_Status__c</fullName>
        <description>Populated via a batch job. Used in the process managing awaiting internal and customer response process.</description>
        <label>Auto Email Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Day 5</fullName>
                </value>
                <value>
                    <fullName>Customer Day 7</fullName>
                </value>
                <value>
                    <fullName>Internal Day 1</fullName>
                </value>
                <value>
                    <fullName>Internal Day 2</fullName>
                </value>
                <value>
                    <fullName>Not Set</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Automatic_Case_Close_Reason__c</fullName>
        <description>Populated via awaiting customer response process.</description>
        <label>Automatic Case Close Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unresponsive Customer</fullName>
                </value>
                <value>
                    <fullName>SPAM</fullName>
                </value>
                <value>
                    <fullName>Routing Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Biz_Agent_Days__c</fullName>
        <description>Business Time with Agents in Days</description>
        <formula>Business_Time_with_Agents__c /(3600 *24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Business Time with Agents in Days</inlineHelpText>
        <label>Biz Agent Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Biz_Agent_Hours__c</fullName>
        <description>Business Time with Agents in Hours</description>
        <formula>Business_Time_with_Agents__c /3600</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Business Time with Agents in Hours</inlineHelpText>
        <label>Biz Agent Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Biz_Agent_Min__c</fullName>
        <description>Business Time with Agents in Minutes</description>
        <formula>Business_Time_with_Agents__c /60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Business Time with Agents in Minutes</inlineHelpText>
        <label>Biz Agent Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Biz_Company_Days__c</fullName>
        <description>Business Time with Company in Days</description>
        <formula>Business_Time_with_Company__c / (3600* 24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Business Time with Company in Days</inlineHelpText>
        <label>Biz Company Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Biz_Company_Hours__c</fullName>
        <description>Business Time with Company in Hours</description>
        <formula>Business_Time_with_Company__c /3600</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Business Time with Company in Hours</inlineHelpText>
        <label>Biz Company Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Biz_Company_Min__c</fullName>
        <description>Business Time with Company in Minutes</description>
        <formula>Business_Time_with_Company__c /60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Business Time with Company in Minutes</inlineHelpText>
        <label>Biz Company Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Biz_Customer_Days__c</fullName>
        <description>Business Time with Customer in Days</description>
        <formula>Business_Time_with_Customers__c /(3600*24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Business Time with Customer in Days</inlineHelpText>
        <label>Biz Customer Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Biz_Customer_Hours__c</fullName>
        <description>Business Time with Customer in Hours</description>
        <formula>Business_Time_with_Customers__c /3600</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Business Time with Customer in Hours</inlineHelpText>
        <label>Biz Customer Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Biz_Customer_Min__c</fullName>
        <description>Business Time with Customer in Minutes</description>
        <formula>Business_Time_with_Customers__c /60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Business Time with Customer in Minutes</inlineHelpText>
        <label>Biz Customer Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Biz_Queue_Days__c</fullName>
        <description>Business Time with Queue in Days</description>
        <formula>Business_Time_with_Queues__c /(3600 * 24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Business Time with Queue in Days</inlineHelpText>
        <label>Biz Queue Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Biz_Queue_Hours__c</fullName>
        <description>Business Time with Queue in Hours</description>
        <formula>Business_Time_with_Queues__c /3600</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Business Time with Queue in Hours</inlineHelpText>
        <label>Biz Queue Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Biz_Queue_Min__c</fullName>
        <description>Business Time with Queue in Minutes</description>
        <formula>Business_Time_with_Queues__c /60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Business Time with Queue in Minutes</inlineHelpText>
        <label>Biz Queue Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Days_to_Close__c</fullName>
        <formula>Total_Calender_Time__c / 86400</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Days to Close</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Time_with_Agents__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Business Time with Agents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Time_with_Company__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Business Time with Company</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Time_with_Customers__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Business Time with Customers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Time_with_Queues__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Business Time with Queues</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Map__c</fullName>
        <formula>CASE(Business_Unit__c , &quot;Hudson&apos;s Bay&quot;, &apos;BAY&apos; ,&apos;Lord + Taylor&apos;,&apos;LT&apos;,&apos;Saks&apos;,&apos;SAKS&apos;,&apos;Off 5th&apos;,&apos;OFF5TH&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hudson&apos;s Bay</fullName>
                </value>
                <value>
                    <fullName>MHF</fullName>
                </value>
                <value>
                    <fullName>Lord + Taylor</fullName>
                </value>
                <value>
                    <fullName>Saks</fullName>
                </value>
                <value>
                    <fullName>Off 5th</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSRID__c</fullName>
        <description>For Medallia Survey FieldSet</description>
        <formula>Owner:User.EmployeeNumber</formula>
        <label>CSRID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTI_Call_Unique_Id__c</fullName>
        <description>the unique id of the cti call when a case is created via an incoming call</description>
        <label>CTI Call Unique Id</label>
        <length>72</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTI_Original_Call_ID__c</fullName>
        <description>ID of the call, carries over across transferred calls</description>
        <externalId>true</externalId>
        <inlineHelpText>ID of the call, carries over across transferred calls</inlineHelpText>
        <label>CTI Original Call ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cal_Agent_Days__c</fullName>
        <description>Calendar Time with Agents in Days</description>
        <formula>Calendar_Time_with_Agents__c / (3600 *24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calendar Time with Agents in Days</inlineHelpText>
        <label>Cal Agent Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cal_Agent_Hours__c</fullName>
        <description>Calendar Time with Agents in Hours</description>
        <formula>Calendar_Time_with_Agents__c /3600</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calendar Time with Agents in Hours</inlineHelpText>
        <label>Cal Agent Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cal_Agent_Min__c</fullName>
        <description>Calendar Time with Agents in Minutes</description>
        <formula>Calendar_Time_with_Agents__c /60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calendar Time with Agents in Minutes</inlineHelpText>
        <label>Cal Agent Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cal_Company_Days__c</fullName>
        <description>Calendar Time with Company in Days</description>
        <formula>Calendar_Time_with_Company__c /(3600*24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calendar Time with Company in Days</inlineHelpText>
        <label>Cal Company Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cal_Company_Hours__c</fullName>
        <description>Calendar Time with Company in Hours</description>
        <formula>Calendar_Time_with_Company__c /3600</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calendar Time with Company in Hours</inlineHelpText>
        <label>Cal Company Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cal_Company_Min__c</fullName>
        <description>Calendar Time with Company in Minutes</description>
        <formula>Calendar_Time_with_Company__c /60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calendar Time with Company in Minutes</inlineHelpText>
        <label>Cal Company Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cal_Customer_Days__c</fullName>
        <description>Calendar Time with Customer in Days</description>
        <formula>Calendar_Time_with_Customers__c /(3600 * 24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calendar Time with Customer in Days</inlineHelpText>
        <label>Cal Customer Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cal_Customer_Hours__c</fullName>
        <description>Calendar Time with Customer in Hours</description>
        <formula>Calendar_Time_with_Customers__c /3600</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calendar Time with Customer in Hours</inlineHelpText>
        <label>Cal Customer Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cal_Customer_Min__c</fullName>
        <description>Calendar Time with Customer in Minutes</description>
        <formula>Calendar_Time_with_Customers__c /60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calendar Time with Customer in Minutes</inlineHelpText>
        <label>Cal Customer Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cal_Queue_Days__c</fullName>
        <description>Calendar Time with Queue in Days</description>
        <formula>Calendar_Time_with_Queues__c /(3600*24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calendar Time with Queue in Days</inlineHelpText>
        <label>Cal Queue Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cal_Queue_Hours__c</fullName>
        <description>Calendar Time with Queue in Hours</description>
        <formula>Calendar_Time_with_Queues__c /3600</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calendar Time with Queue in Hours</inlineHelpText>
        <label>Cal Queue Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cal_Queue_Min__c</fullName>
        <description>Calendar Time with Queue in Minutes</description>
        <formula>Calendar_Time_with_Queues__c /60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calendar Time with Queue in Minutes</inlineHelpText>
        <label>Cal Queue Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calendar_Days_to_Close__c</fullName>
        <formula>Total_Calender_Time__c  / 86400</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calendar Days to Close</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calendar_Time_with_Agents__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Calendar Time with Agents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calendar_Time_with_Company__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Calendar Time with Company</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calendar_Time_with_Customers__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Calendar Time with Customers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calendar_Time_with_Queues__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Calendar Time with Queues</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Status__c</fullName>
        <description>Stage of the call that the current case is in</description>
        <inlineHelpText>Stage of the call that the current case is in</inlineHelpText>
        <label>Call Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transferred</fullName>
                </value>
                <value>
                    <fullName>Answered</fullName>
                </value>
                <value>
                    <fullName>Ended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Can_Re_Order__c</fullName>
        <description>Used as part of internal HBC business processes</description>
        <label>Can Re-Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Type__c</fullName>
        <label>Cancellation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HBC_MC_CC_001</fullName>
                    <label>Customer has different Coupon</label>
                </value>
                <value>
                    <fullName>HBC_MC_CC_002</fullName>
                    <label>Customer Preference</label>
                </value>
                <value>
                    <fullName>HBC_MC_CC_003</fullName>
                    <label>Different Method of Payment</label>
                </value>
                <value>
                    <fullName>HBC_MC_CC_004</fullName>
                    <label>Different Price</label>
                </value>
                <value>
                    <fullName>HBC_MC_CC_005</fullName>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>HBC_MC_CC_006</fullName>
                    <label>Customer Request</label>
                </value>
                <value>
                    <fullName>HBC_MC_CC_007</fullName>
                    <label>Shipping Delay</label>
                </value>
                <value>
                    <fullName>HBC_MC_CC_008</fullName>
                    <label>Store Locator Reprocess</label>
                </value>
                <value>
                    <fullName>HBC_MC_CC_009</fullName>
                    <label>Item order Verification - RM</label>
                </value>
                <value>
                    <fullName>HBC_MC_CC_010</fullName>
                    <label>No Inventory</label>
                </value>
                <value>
                    <fullName>HBC_MC_CC_011</fullName>
                    <label>Reprocess</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Candidate_for_Knowledge_Article__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by agents to flag cases that would be a good candidate to have a Knowledge article created for. Completed when they close the case.</description>
        <label>Candidate for Knowledge Article</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseNo__c</fullName>
        <description>&apos;Power of 1&apos; field for summary reporting, e.g. averaging Case Time Log duration by Status / Case</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseNo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Age_In_Business_Hours__c</fullName>
        <description>Used as part of the case age in business hours package. The total case age in business hours from open to close. Updated on case status change</description>
        <inlineHelpText>The total case age in business hours from open to close.</inlineHelpText>
        <label>Case Age In Business Hours</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Language__c</fullName>
        <description>Default to English. Used when creating a new contact to set preferred language on contact creation.</description>
        <label>Case Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Owner_Location__c</fullName>
        <formula>TEXT(Owner:User.Agent_Location__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Profile__c</fullName>
        <formula>Owner:User.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Supervisor_ID__c</fullName>
        <formula>Owner:User.ManagerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner Supervisor ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Supervisor__c</fullName>
        <description>The direct supervisor of the current case owner.</description>
        <formula>Owner:User.Manager.FirstName + &quot; &quot; +  Owner:User.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner Supervisor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Steward__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Steward</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <description>Replaces the standard Type field (relabeled Type Old)</description>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Business_Unit__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>BTO - Big Ticket Order (New Purchases)</fullName>
                </value>
                <value>
                    <fullName>Credit Hold</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>Delivery (WISMO)</fullName>
                </value>
                <value>
                    <fullName>Delivery Resolution</fullName>
                </value>
                <value>
                    <fullName>Exchange / Return / Allowance (ERA)</fullName>
                </value>
                <value>
                    <fullName>Gift Card(s)</fullName>
                </value>
                <value>
                    <fullName>Gift Registry</fullName>
                </value>
                <value>
                    <fullName>Major Home Fashion</fullName>
                </value>
                <value>
                    <fullName>Order Inquiry</fullName>
                </value>
                <value>
                    <fullName>Order placed</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>Place an order</fullName>
                </value>
                <value>
                    <fullName>Product Information</fullName>
                </value>
                <value>
                    <fullName>Refunds/Credits</fullName>
                </value>
                <value>
                    <fullName>Returns</fullName>
                </value>
                <value>
                    <fullName>Rewards</fullName>
                </value>
                <value>
                    <fullName>Special Projects</fullName>
                </value>
                <value>
                    <fullName>Store Experience</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
                <value>
                    <fullName>Warranty</fullName>
                </value>
                <value>
                    <fullName>Executive Escalation Only</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Order System Error</fullName>
                </value>
                <value>
                    <fullName>Rewards Escalation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>Power of one field for reports</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>